# collocation

./: README.md  collocation.py  example.py  pyproject.toml  tests.py
